--- a/assets/styles/estilos_de_andres.css
+++ b/assets/styles/estilos_de_andres.css
@@ -10,3 +10,47 @@ nav>ul>li>a{text-decoration: none;}
 #footer_blog{margin: 2rem;}
 .ilustracion{display: inline-block; border: 4px solid rgb(135, 0, 245);}
 .ilustracion figcaption{margin-top: 1rem; margin-left: 1rem; font-style: italic;}
+
+/* grid */
+section {
+    
+    /* despliégate como  grid */
+    display: grid;
+    /* Crea 12 columnas cada una de una fracción usando la función repeat*/
+    grid-template-columns: repeat(12, 1fr);
+    /* deja que las filas(renglones) ocupen el alto que necesitan */
+    grid-auto-rows: auto;
+    /* añade un espacio entre los elementos del grid de 3rem */
+    gap: 3rem;
+
+}
+
+/* apunta sólo a los header que son hijos directos de section */
+section>header {
+    /* esta sección se extenderá 12 columnas. */
+    grid-column: span 12;
+
+    
+}
+
+/* apunta sólo a los main que son hijos directos de section */
+section>main {
+    /* esta sección se extenderá  columnas. */
+    grid-column: span 8;
+}
+
+/*
+/* apunta sólo a los footer que son hijos directos de section */
+section>footer {
+    /* esta sección se extenderá 12 columnas. */
+    grid-column: span 12;
+} 
+
+/* apunta sólo a los aside que son hijos directos de section */
+section>aside {
+    /* esta sección se extenderá 4 columnas. */
+    grid-column: span 4;
+}
+
+
+Termina grid */
