--- a/assets/styles/estilo1.css
+++ b/assets/styles/estilo1.css
@@ -53,3 +53,40 @@ section>aside {
     /* esta sección se extenderá 4 columnas. */
     grid-column: span 4;
 }
+microbloging{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
+nav{font-size: 1.3rem;}
+nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: yellowgreen;}
+nav>ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 1px solid white;
+    padding-bottom: 0.5rem;
+}
+article>header>hgroup{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+article>header>hgroup>h2{
+    display: flex;
+    align-items: center;
+}
+article>header>hgroup>h2>img{
+    margin-right: 1rem;
+}
+aside>h2{align-items: center;font-size: 1.6rem;text-align: center;}
+aside>div:nth-of-type(even){background-color: rgb(44, 43, 43);}
+aside>div>img {
+    background-color: rgb(242, 247, 248);
+    padding: 0.5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+    margin-left: 0.5rem;
+}
+aside>div{
+    display: flex;
+    align-items: center;
+    border-bottom: dashed;
+    border-width: 0.05rem;
+    padding: 0.6rem; be
