--- a/assets/styles/estilo1.css
+++ b/assets/styles/estilo1.css
@@ -55,7 +55,7 @@ section>aside {
 }
 microbloging{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
 nav{font-size: 1.3rem;}
-nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: yellowgreen;}
+nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: rgb(18, 59, 134);}
 nav>ul{
     display: flex;
     align-items: center;
@@ -90,3 +90,6 @@ aside>div{
     border-bottom: dashed;
     border-width: 0.05rem;
     padding: 0.6rem; be
+
+    #footer_blog div:nth-child(2)
+    font-size:0.9rem;
