--- a/assets/styles/estilo1.css
+++ b/assets/styles/estilo1.css
@@ -43,7 +43,15 @@ section>main {
 
 /*
 /* apunta sólo a los footer que son hijos directos de section */
-section>footer {
+section>footer {aside>h2{align-items: center;font-size: 1.6rem;text-align: center;}
+aside>div:nth-of-type(even){background-color: rgb(44, 43, 43);}
+aside>div>img {
+    background-color: rgb(242, 247, 248);
+    padding: 0.5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+    margin-left: 0.5rem;
+}
     /* esta sección se extenderá 12 columnas. */
     grid-column: span 12;
 } 
@@ -90,6 +98,15 @@ aside>div{
     border-bottom: dashed;
     border-width: 0.05rem;
     padding: 0.6rem; be
-
+}
     #footer_blog div:nth-child(2)
     font-size:0.9rem;
+    aside>h2{align-items: center;font-size: 1.6rem;text-align: center;}
+aside>div:nth-of-type(even){background-color: rgb(44, 43, 43);}
+aside>div>img {
+    background-color: rgb(242, 247, 248);
+    padding: 0.5rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+    margin-left: 0.5rem;
+}
