--- a/assets/styles/estilos_de_andres.css
+++ b/assets/styles/estilos_de_andres.css
@@ -8,7 +8,13 @@ article{background-color: rgb(0, 0, 0);padding: 1.5rem;border-bottom: 1px solid 
 .resaltado{color: rgba(94, 255, 0, 0.534);}
 nav>ul>li{list-style: none;}
 nav>ul>li>a{text-decoration: none;}
-#footer_blog{margin: 2rem;}
+
+#footer_blog{display: flex;margin: 2rem;align-items: center;justify-content: space-between;padding: 4rem 0 4rem 0;font-size: 1.3rem;}
+#footer_blog div:nth-child(2){font-size: 0.9rem;}
+.ilustracion{display: inline-block; border: 4px solid white;}
+.ilustracion figcaption{ margin-top: 1rem; margin-left: 1rem; font-style: italic}
+
+.referencia{color:rgb(125, 65, 139);}
 .ilustracion{display: inline-block; border: 4px solid rgb(255, 255, 255);}
 .ilustracion figcaption{margin-top: 1rem; margin-left: 1rem; font-style: italic;}
 
@@ -43,6 +49,7 @@ section>main {
 /*
 /* apunta sólo a los footer que son hijos directos de section */
 section>footer {
+
     /* esta sección se extenderá 12 columnas. */
     grid-column: span 12;
 } 
@@ -93,4 +100,18 @@ aside>div{
     align-items: center;
     border-bottom: dashed;
     border-width: 0.05rem;
-    padding: 0.6rem; be
+    padding: 0.6rem; 
+}
+#footer_blog div:nth-child(2)
+font-size:0.9rem;
+
+footer{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
+nav{font-size: 1.3rem;}
+nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: yellowgreen;}
+nav>ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 1px solid white;
+    padding-bottom: 0.5rem;
+}
