--- a/assets/styles/estilos_de_andres.css
+++ b/assets/styles/estilos_de_andres.css
@@ -1,4 +1,3 @@
-
 *{box-sizing: border-box;}
 body{background-color: rgb(0, 73, 22);color:white;}
 article{background-color: rgb(0, 0, 0);padding: 1.5rem;border-bottom: 1px solid rgb(115, 255, 0);}
@@ -13,6 +12,11 @@ nav>ul>li>a{text-decoration: none;}
 #footer_blog div:nth-child(2){font-size: 0.9rem;}
 .ilustracion{display: inline-block; border: 4px solid white;}
 .ilustracion figcaption{ margin-top: 1rem; margin-left: 1rem; font-style: italic}
+
+
+ }
+
+
 
 .referencia{color:rgb(125, 65, 139);}
 .ilustracion{display: inline-block; border: 4px solid rgb(255, 255, 255);}
@@ -115,3 +119,7 @@ nav>ul{
     border-bottom: 1px solid white;
     padding-bottom: 0.5rem;
 }
+
+
+
+
