--- a/assets/styles/estilos_de_andres.css
+++ b/assets/styles/estilos_de_andres.css
@@ -112,6 +112,9 @@ font-size:0.9rem;
 footer{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
 nav{font-size: 1.3rem;}
 nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: yellowgreen;}
+nav>ul>li>a{text-decoration: none; color: white;}
+
+
 nav>ul{
     display: flex;
     align-items: center;
