--- a/assets/styles/estilos_de_andres.css
+++ b/assets/styles/estilos_de_andres.css
@@ -18,7 +18,7 @@ nav>ul>li>a{text-decoration: none;}
 
 
 
-.referencia{color:rgb(125, 65, 139);}
+.referencia{color:rgb(200, 255, 0);}
 .ilustracion{display: inline-block; border: 4px solid rgb(255, 255, 255);}
 .ilustracion figcaption{margin-top: 1rem; margin-left: 1rem; font-style: italic;}
 
@@ -106,6 +106,21 @@ aside>div{
     border-width: 0.05rem;
     padding: 0.6rem; 
 }
+    aside div img {
+        /* la imagen tendrá color de fondo blanco */
+        background-color: rgb(255, 255, 255);
+        /* habrá un espacio entre el borde y el contenido de 0.5rem */
+        padding: 0.5rem;
+        /* redondea el borde para que sea un círculo */
+        border-radius: 50%;
+        border-radius: 50%;
+        margin-right: 1rem;
+    }
+    aside>div{
+        display: flex;
+        align-items: center;
+        border-top:dashed;
+}
 #footer_blog div:nth-child(2)
 font-size:0.9rem;
 
@@ -122,6 +137,10 @@ nav>ul{
     border-bottom: 1px solid white;
     padding-bottom: 0.5rem;
 }
+
+
+
+
 
 
 
