--- a/assets/styles/estilo1.css
+++ b/assets/styles/estilo1.css
@@ -1,21 +1,53 @@
-body {
-    background-color: blue;
-}*{box-sizing: border-box;}
-body{background-color: rgba(32, 46, 34, 0.521);color:rgb(0, 0, 0);}
-article{background-color: rgb(255, 255, 255);padding: 1.5rem;border-bottom: 1px solid rgb(0, 0, 0);}
+*{box-sizing: border-box;}
+body{background-color: rgb(185, 0, 0);color:white;margin: 0%;}
+article{background-color: rgb(0, 0, 0);padding: 1.5rem;border-bottom: 1px solid rgb(0, 247, 255);text-align: justify;line-height: 30px;}
 #Ajedrez{text-align: center; font-size: 3rem;}
 #Soccer{text-align: center; font-size: 3rem;}
 #Marvel {text-align: center; font-size: 3rem;}
-.resaltado{color: rgba(137, 143, 134, 0.534);}
+.resaltado{color: rgba(255, 125, 223, 0.534);}
 nav>ul>li{list-style: none;}
 nav>ul>li>a{text-decoration: none;}
-#footer_blog{margin: 2rem;}
-.ilustracion{display: inline-block; border: 4px solid rgb(135, 0, 245);}
+ 
+#footer_blog{display: flex;margin: 2rem;align-items: center;justify-content: space-between;padding: 4rem 0 4rem 0;font-size: 1.3rem;}
+#footer_blog div:nth-child(2){font-size: 0.9rem;}
+.ilustracion{display: inline-block; border: 4px solid white;}
+.ilustracion figcaption{ margin-top: 1rem; margin-left: 1rem; font-style: italic}
+ 
+ 
+ 
+ 
+ 
+ 
+.referencia{color:rgb(200, 255, 0);}
+.ilustracion{display: inline-block; border: 4px solid rgb(255, 255, 255);}
 .ilustracion figcaption{margin-top: 1rem; margin-left: 1rem; font-style: italic;}
-
+ 
+ 
+/* desde 0 hasta 1099px compórtate así: */
+nav ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 1rem;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 1.5rem;
+}
+ 
+/* pantallas grandes de 1100px en adelante compórtate así: */
+@media (min-width: 1100px) {
+    nav ul {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border-bottom: 1px solid red;
+    }
+}
+ 
+/* fin pantallas grandes */
+ 
 /* grid */
 section {
-    
+   
     /* despliégate como  grid */
     display: grid;
     /* Crea 12 columnas cada una de una fracción usando la función repeat*/
@@ -24,46 +56,137 @@ section {
     grid-auto-rows: auto;
     /* añade un espacio entre los elementos del grid de 3rem */
     gap: 3rem;
-
+ 
 }
-
+/* desde 0 hasta 1099px compórtate así: */
+nav ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 1rem;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 1.5rem;
+}
+ 
+ 
+/* fin pantallas grandes */
+ 
+ 
 /* apunta sólo a los header que son hijos directos de section */
 section>header {
     /* esta sección se extenderá 12 columnas. */
-    grid-column: span 12;
-
-    
+    grid-column: span 12;  
 }
+/* desde 0 hasta 1099px compórtate así: */
+nav ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 1rem;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 1.5rem;
+}
+ 
 
+ 
+ 
+ 
 /* apunta sólo a los main que son hijos directos de section */
-section>main {
-    /* esta sección se extenderá  columnas. */
-    grid-column: span 8;
-}
 
-/*
-/* apunta sólo a los footer que son hijos directos de section */
-section>footer {aside>h2{align-items: center;font-size: 1.6rem;text-align: center;}
-aside>div:nth-of-type(even){background-color: rgb(44, 43, 43);}
-aside>div>img {
-    background-color: rgb(242, 247, 248);
-    padding: 0.5rem;
-    border-radius: 50%;
-    margin-right: 1rem;
-    margin-left: 0.5rem;
+@media (min-width: 1024.1px){section>main{grid-column: span 8;}} 
+
+/* desde 0 hasta 1099px compórtate así: */
+nav ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 1rem;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 1.5rem;
 }
+/* apunta sólo a los footer que son hijos directos de section */
+section>footer {
+ 
     /* esta sección se extenderá 12 columnas. */
     grid-column: span 12;
-} 
+    display: flex;
+    margin: 2rem;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem;
+    font-size: 1.3rem;
+}
+/* desde 0 hasta 1099px compórtate así: */
+nav ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 1rem;
+    border-bottom: 1px solid rgb(49, 156, 0);
+    padding-bottom: 1.5rem;
+}
 
+ 
+
+/* fin pantallas grandes */
 /* apunta sólo a los aside que son hijos directos de section */
 section>aside {
     /* esta sección se extenderá 4 columnas. */
-    grid-column: span 4;
+    grid-column: span 12;
+}   
+@media (min-width: 1024.1px){
+    section>aside{grid-column: span 4;}
 }
-microbloging{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
+aside div {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+    padding: 0.6rem;
+    border-bottom: 1px dashed rgb(255, 255, 255);
+}
+ 
+/* si la pantalla mide mínimo 1024.1 px y máximo 1324.1 entonces... */
+@media (min-width: 1024.1px) and (max-width: 1324.1px) {
+    aside div {
+        /* despliega los elementos de microblogging uno encima del otr */
+        flex-direction: column;
+    }
+}
+ 
+/* end media */
+ 
+ 
+ 
+
+    
+    
+aside div {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1rem;
+    padding: 0.6rem;
+    border-bottom: 1px dashed #fff;
+}
+ 
+/* si la pantalla mide mínimo 1024.1 px y máximo 1324.1 entonces... */
+@media (min-width: 1024.1px) and (max-width: 1324.1px) {
+    aside div {
+        /* despliega los elementos de microblogging uno encima del otr */
+        flex-direction: column;
+    }
+}
+ 
+/* end media */
+ 
+ 
+ 
+ 
+ 
+.microbloging{display: inline-block; text-align: justify; line-height: 35px;}
 nav{font-size: 1.3rem;}
-nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: rgb(18, 59, 134);}
+nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: yellowgreen;}
 nav>ul{
     display: flex;
     align-items: center;
@@ -97,16 +220,100 @@ aside>div{
     align-items: center;
     border-bottom: dashed;
     border-width: 0.05rem;
-    padding: 0.6rem; be
+    padding: 0.6rem;
 }
-    #footer_blog div:nth-child(2)
-    font-size:0.9rem;
-    aside>h2{align-items: center;font-size: 1.6rem;text-align: center;}
-aside>div:nth-of-type(even){background-color: rgb(44, 43, 43);}
-aside>div>img {
-    background-color: rgb(242, 247, 248);
-    padding: 0.5rem;
-    border-radius: 50%;
-    margin-right: 1rem;
-    margin-left: 0.5rem;
+    aside div img {
+        /* la imagen tendrá color de fondo blanco */
+        background-color: rgb(255, 255, 255);
+        /* habrá un espacio entre el borde y el contenido de 0.5rem */
+        padding: 0.5rem;
+        /* redondea el borde para que sea un círculo */
+        border-radius: 50%;
+        border-radius: 50%;
+        margin-right: 1rem;
+    }
+    aside>div{
+        display: flex;
+        align-items: center;
+        border-top:dashed;
 }
+#footer_blog div:nth-child(2)
+
+ 
+footer{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
+nav{font-size: 1.3rem;}
+nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: rgb(236, 35, 0);}
+nav>ul>li>a{text-decoration: none; color: white;}
+ 
+nav>ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 1px solid white;
+    padding-bottom: 0.5rem;
+}
+
+                                      
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media(min-width: 1024.1px){
+    section>footer {
+        flex-direction: column;
+        line-height: 38px;
+    }
+}
+
+
+nav{
+    font-size: 1.3rem;
+    position: fixed;
+    width: 100%;
+    background-color: black;
+}
+
+
+
+
+
+@media(min-width: 1100px){
+    nav>ul{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border-bottom: 1px solid red;
+    }
+}
+
+/* si la pantalla mide mínimo 1024.1 px y máximo 1324.1 entonces... */
+@media (min-width: 1024.1px) and (max-width: 1324.1px) {
+    aside div {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 1rem;
+        padding: 0.6rem;
+        border-bottom: 1px dashed rgb(253, 253, 253);
+    
+        /* despliega los elementos de microblogging uno encima del otr */
+        flex-direction: column;
+    }
+}
+
+/* end media */
+@media(min-width:1024.1px)and(max-width:1324.1){aside>div{flex-direction: column;}}
