--- a/assets/styles/estilos_de_andres.css
+++ b/assets/styles/estilos_de_andres.css
@@ -1,6 +1,6 @@
 *{box-sizing: border-box;}
-body{background-color: rgb(0, 73, 22);color:white;}
-article{background-color: rgb(0, 0, 0);padding: 1.5rem;border-bottom: 1px solid rgb(115, 255, 0);}
+body{background-color: rgb(0, 73, 22);color:white;margin: 0%;}
+article{background-color: rgb(0, 0, 0);padding: 1.5rem;border-bottom: 1px solid rgb(115, 255, 0);text-align: justify;line-height: 30px;}
 #Ajedrez{text-align: center; font-size: 3rem;}
 #Soccer{text-align: center; font-size: 3rem;}
 #Marvel {text-align: center; font-size: 3rem;}
@@ -14,7 +14,7 @@ nav>ul>li>a{text-decoration: none;}
 .ilustracion figcaption{ margin-top: 1rem; margin-left: 1rem; font-style: italic}
  
  
- }
+ 
  
  
  
@@ -68,15 +68,6 @@ nav ul {
     padding-bottom: 1.5rem;
 }
  
-/* pantallas grandes de 1100px en adelante compórtate así: */
-@media (min-width: 1100px) {
-    nav ul {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        border-bottom: 1px solid red;
-    }
-}
  
 /* fin pantallas grandes */
  
@@ -96,25 +87,14 @@ nav ul {
     padding-bottom: 1.5rem;
 }
  
-/* pantallas grandes de 1100px en adelante compórtate así: */
-@media (min-width: 1100px) {
-    nav ul {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        border-bottom: 1px solid red;
-    }
-}
- 
-/* fin pantallas grandes */
+
  
  
  
 /* apunta sólo a los main que son hijos directos de section */
-section>main {
-    /* esta sección se extenderá  columnas. */
-    grid-column: span 8;
-}
+
+@media (min-width: 1024.1px){section>main{grid-column: span 8;}} 
+
 /* desde 0 hasta 1099px compórtate así: */
 nav ul {
     display: grid;
@@ -124,27 +104,17 @@ nav ul {
     border-bottom: 1px solid #fff;
     padding-bottom: 1.5rem;
 }
- 
-/* pantallas grandes de 1100px en adelante compórtate así: */
-@media (min-width: 1100px) {
-    nav ul {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        border-bottom: 1px solid red;
-    }
-}
- 
-/* fin pantallas grandes */
- 
- 
- 
-/*
 /* apunta sólo a los footer que son hijos directos de section */
 section>footer {
  
     /* esta sección se extenderá 12 columnas. */
     grid-column: span 12;
+    display: flex;
+    margin: 2rem;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem;
+    font-size: 1.3rem;
 }
 /* desde 0 hasta 1099px compórtate así: */
 nav ul {
@@ -152,28 +122,20 @@ nav ul {
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: auto;
     gap: 1rem;
-    border-bottom: 1px solid rgb(0, 224, 231);
+    border-bottom: 1px solid rgb(49, 156, 0);
     padding-bottom: 1.5rem;
 }
+
  
-/* pantallas grandes de 1100px en adelante compórtate así: */
-@media (min-width: 1100px) {
-    nav ul {
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-        border-bottom: 1px solid red;
-    }
-}
- 
-/* fin pantallas grandes */
- 
-}
+
 /* fin pantallas grandes */
 /* apunta sólo a los aside que son hijos directos de section */
 section>aside {
     /* esta sección se extenderá 4 columnas. */
-    grid-column: span 4;
+    grid-column: span 12;
+}   
+@media (min-width: 1024.1px){
+    section>aside{grid-column: span 4;}
 }
 aside div {
     display: flex;
@@ -181,7 +143,7 @@ aside div {
     justify-content: flex-start;
     gap: 1rem;
     padding: 0.6rem;
-    border-bottom: 1px dashed #fff;
+    border-bottom: 1px dashed rgb(255, 255, 255);
 }
  
 /* si la pantalla mide mínimo 1024.1 px y máximo 1324.1 entonces... */
@@ -197,7 +159,7 @@ aside div {
  
  
 
-    }
+    
     
 aside div {
     display: flex;
@@ -222,7 +184,7 @@ aside div {
  
  
  
-microbloging{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
+.microbloging{display: inline-block; text-align: justify; line-height: 35px;}
 nav{font-size: 1.3rem;}
 nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: yellowgreen;}
 nav>ul{
@@ -276,13 +238,12 @@ aside>div{
         border-top:dashed;
 }
 #footer_blog div:nth-child(2)
-font-size:0.9rem;
+
  
 footer{display: inline-block;border: 4px solid white; text-align: justify; line-height: 35px;}
 nav{font-size: 1.3rem;}
 nav>ul>li>a:hover{font-size: 1.8rem;text-decoration: underline; color: yellowgreen;}
 nav>ul>li>a{text-decoration: none; color: white;}
- 
  
 nav>ul{
     display: flex;
@@ -314,7 +275,7 @@ nav>ul{
 @media(min-width: 1024.1px){
     section>footer {
         flex-direction: column;
-        line-height: 3rem;
+        line-height: 38px;
     }
 }
 
@@ -339,8 +300,6 @@ nav{
     }
 }
 
-
-
 /* si la pantalla mide mínimo 1024.1 px y máximo 1324.1 entonces... */
 @media (min-width: 1024.1px) and (max-width: 1324.1px) {
     aside div {
@@ -357,3 +316,4 @@ nav{
 }
 
 /* end media */
+@media(min-width:1024.1px)and(max-width:1324.1){aside>div{flex-direction: column;}}
